--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="case">
-            <img src="../images/illustration-hero.svg" alt="">
+            <img src="images/illustration-hero.svg" alt="">
             <div class="order_summary">
                 <h1 class="text-dark">
                     Order Summary
@@ -25,7 +25,7 @@
 
             <div class="box">
                 <div class="inner-box">
-                    <img src="../images/icon-music.svg" alt="">
+                    <img src="images/icon-music.svg" alt="">
                     <div>
                         <p class="text-dark">Annual Plan</p>
                         <p class="text-light">$59.99/year</p>
